// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > add custom theme case 0 > calcBase 1`] = `
{
  "colors": {
    "accent": "rgba(var(--ice-accent) / <alpha-value>)",
    "accent-active": "rgba(var(--ice-accent-active) / <alpha-value>)",
    "accent-content": "rgba(var(--ice-accent-content) / <alpha-value>)",
    "accent-hover": "rgba(var(--ice-accent-hover) / <alpha-value>)",
    "base-100": "rgba(var(--ice-base-100) / <alpha-value>)",
    "base-1000": "rgba(var(--ice-base-1000) / <alpha-value>)",
    "base-1100": "rgba(var(--ice-base-1100) / <alpha-value>)",
    "base-1200": "rgba(var(--ice-base-1200) / <alpha-value>)",
    "base-1300": "rgba(var(--ice-base-1300) / <alpha-value>)",
    "base-200": "rgba(var(--ice-base-200) / <alpha-value>)",
    "base-300": "rgba(var(--ice-base-300) / <alpha-value>)",
    "base-400": "rgba(var(--ice-base-400) / <alpha-value>)",
    "base-500": "rgba(var(--ice-base-500) / <alpha-value>)",
    "base-600": "rgba(var(--ice-base-600) / <alpha-value>)",
    "base-700": "rgba(var(--ice-base-700) / <alpha-value>)",
    "base-800": "rgba(var(--ice-base-800) / <alpha-value>)",
    "base-900": "rgba(var(--ice-base-900) / <alpha-value>)",
    "base-content": "rgba(var(--ice-base-content) / <alpha-value>)",
    "current": "currentColor",
    "error": "rgba(var(--ice-error) / <alpha-value>)",
    "error-active": "rgba(var(--ice-error-active) / <alpha-value>)",
    "error-content": "rgba(var(--ice-error-content) / <alpha-value>)",
    "error-hover": "rgba(var(--ice-error-hover) / <alpha-value>)",
    "neutral": "rgba(var(--ice-neutral) / <alpha-value>)",
    "neutral-active": "rgba(var(--ice-neutral-active) / <alpha-value>)",
    "neutral-content": "rgba(var(--ice-neutral-content) / <alpha-value>)",
    "neutral-hover": "rgba(var(--ice-neutral-hover) / <alpha-value>)",
    "primary": "rgba(var(--ice-primary) / <alpha-value>)",
    "primary-active": "rgba(var(--ice-primary-active) / <alpha-value>)",
    "primary-content": "rgba(var(--ice-primary-content) / <alpha-value>)",
    "primary-hover": "rgba(var(--ice-primary-hover) / <alpha-value>)",
    "secondary": "rgba(var(--ice-secondary) / <alpha-value>)",
    "secondary-active": "rgba(var(--ice-secondary-active) / <alpha-value>)",
    "secondary-content": "rgba(var(--ice-secondary-content) / <alpha-value>)",
    "secondary-hover": "rgba(var(--ice-secondary-hover) / <alpha-value>)",
    "success": "rgba(var(--ice-success) / <alpha-value>)",
    "success-active": "rgba(var(--ice-success-active) / <alpha-value>)",
    "success-content": "rgba(var(--ice-success-content) / <alpha-value>)",
    "success-hover": "rgba(var(--ice-success-hover) / <alpha-value>)",
    "transparent": "transparent",
    "warning": "rgba(var(--ice-warning) / <alpha-value>)",
    "warning-active": "rgba(var(--ice-warning-active) / <alpha-value>)",
    "warning-content": "rgba(var(--ice-warning-content) / <alpha-value>)",
    "warning-hover": "rgba(var(--ice-warning-hover) / <alpha-value>)",
  },
  "presets": {
    ":root": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "--border-btn": "1px",
        "--error": "245 34 45",
        "--error-active": "207 19 34",
        "--error-content": "255 255 255",
        "--error-hover": "255 77 79",
        "--neutral": "102 102 102",
        "--neutral-active": "64 64 64",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "115 115 115",
        "--primary": "22 119 255",
        "--primary-active": "9 88 217",
        "--primary-content": "255 255 255",
        "--primary-hover": "64 150 255",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "82 196 26",
        "--success-active": "56 158 13",
        "--success-content": "255 255 255",
        "--success-hover": "115 209 61",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "250 173 20",
        "--warning-active": "212 136 6",
        "--warning-content": "255 255 255",
        "--warning-hover": "255 197 61",
      },
    },
    "[data-mode="cupcake"]": {
      "css": {
        "--accent": "238 175 58",
        "--accent-active": "199 137 38",
        "--accent-content": "255 255 255",
        "--accent-hover": "250 202 100",
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "250 247 245",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "239 234 230",
        "--base-300": "231 226 223",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "41 19 52",
        "--border-btn": "1px",
        "--neutral": "41 19 52",
        "--neutral-active": "10 4 13",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "55 34 64",
        "--primary": "101 195 200",
        "--primary-active": "72 153 161",
        "--primary-content": "255 255 255",
        "--primary-hover": "142 210 212",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--secondary": "239 159 188",
        "--secondary-active": "201 125 156",
        "--secondary-content": "255 255 255",
        "--secondary-hover": "252 210 224",
        "--skeleton-duration": "1.2s",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
      },
    },
    "[data-mode="dark"]": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "0 0 0",
        "--base-1000": "240 240 240",
        "--base-1100": "245 245 245",
        "--base-1200": "250 250 250",
        "--base-1300": "255 255 255",
        "--base-200": "20 20 20",
        "--base-300": "31 31 31",
        "--base-400": "38 38 38",
        "--base-500": "67 67 67",
        "--base-600": "89 89 89",
        "--base-700": "140 140 140",
        "--base-800": "191 191 191",
        "--base-900": "217 217 217",
        "--base-content": "255 255 255",
        "--border-btn": "1px",
        "--error": "211 32 41",
        "--error-active": "232 71 73",
        "--error-content": "255 255 255",
        "--error-hover": "166 29 36",
        "--neutral": "90 90 90",
        "--neutral-active": "106 106 106",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "73 73 73",
        "--primary": "22 104 220",
        "--primary-active": "60 137 232",
        "--primary-content": "255 255 255",
        "--primary-hover": "21 84 173",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "73 170 25",
        "--success-active": "106 190 57",
        "--success-content": "255 255 255",
        "--success-hover": "60 134 24",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "216 150 20",
        "--warning-active": "232 179 57",
        "--warning-content": "255 255 255",
        "--warning-hover": "170 119 20",
      },
    },
  },
  "types": [
    "primary",
    "success",
    "warning",
    "error",
    "neutral",
    "secondary",
    "accent",
  ],
}
`;

exports[`base > add custom theme case 0 1`] = `
":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-mode=dark] {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-mode=cupcake] {
  --ice-primary: 101 195 200;
  --ice-primary-hover: 142 210 212;
  --ice-primary-active: 72 153 161;
  --ice-primary-content: 255 255 255;
  --ice-secondary: 239 159 188;
  --ice-secondary-hover: 252 210 224;
  --ice-secondary-active: 201 125 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 238 175 58;
  --ice-accent-hover: 250 202 100;
  --ice-accent-active: 199 137 38;
  --ice-accent-content: 255 255 255;
  --ice-neutral: 41 19 52;
  --ice-neutral-hover: 55 34 64;
  --ice-neutral-active: 10 4 13;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 250 247 245;
  --ice-base-200: 239 234 230;
  --ice-base-300: 231 226 223;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 41 19 52;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;

exports[`base > add extra css options > calcBase 1`] = `
{
  "colors": {
    "base-100": "rgba(var(--ice-base-100) / <alpha-value>)",
    "base-1000": "rgba(var(--ice-base-1000) / <alpha-value>)",
    "base-1100": "rgba(var(--ice-base-1100) / <alpha-value>)",
    "base-1200": "rgba(var(--ice-base-1200) / <alpha-value>)",
    "base-1300": "rgba(var(--ice-base-1300) / <alpha-value>)",
    "base-200": "rgba(var(--ice-base-200) / <alpha-value>)",
    "base-300": "rgba(var(--ice-base-300) / <alpha-value>)",
    "base-400": "rgba(var(--ice-base-400) / <alpha-value>)",
    "base-500": "rgba(var(--ice-base-500) / <alpha-value>)",
    "base-600": "rgba(var(--ice-base-600) / <alpha-value>)",
    "base-700": "rgba(var(--ice-base-700) / <alpha-value>)",
    "base-800": "rgba(var(--ice-base-800) / <alpha-value>)",
    "base-900": "rgba(var(--ice-base-900) / <alpha-value>)",
    "base-content": "rgba(var(--ice-base-content) / <alpha-value>)",
    "current": "currentColor",
    "error": "rgba(var(--ice-error) / <alpha-value>)",
    "error-active": "rgba(var(--ice-error-active) / <alpha-value>)",
    "error-content": "rgba(var(--ice-error-content) / <alpha-value>)",
    "error-hover": "rgba(var(--ice-error-hover) / <alpha-value>)",
    "neutral": "rgba(var(--ice-neutral) / <alpha-value>)",
    "neutral-active": "rgba(var(--ice-neutral-active) / <alpha-value>)",
    "neutral-content": "rgba(var(--ice-neutral-content) / <alpha-value>)",
    "neutral-hover": "rgba(var(--ice-neutral-hover) / <alpha-value>)",
    "primary": "rgba(var(--ice-primary) / <alpha-value>)",
    "primary-active": "rgba(var(--ice-primary-active) / <alpha-value>)",
    "primary-content": "rgba(var(--ice-primary-content) / <alpha-value>)",
    "primary-hover": "rgba(var(--ice-primary-hover) / <alpha-value>)",
    "success": "rgba(var(--ice-success) / <alpha-value>)",
    "success-active": "rgba(var(--ice-success-active) / <alpha-value>)",
    "success-content": "rgba(var(--ice-success-content) / <alpha-value>)",
    "success-hover": "rgba(var(--ice-success-hover) / <alpha-value>)",
    "transparent": "transparent",
    "warning": "rgba(var(--ice-warning) / <alpha-value>)",
    "warning-active": "rgba(var(--ice-warning-active) / <alpha-value>)",
    "warning-content": "rgba(var(--ice-warning-content) / <alpha-value>)",
    "warning-hover": "rgba(var(--ice-warning-hover) / <alpha-value>)",
  },
  "presets": {
    ":root": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "--border-btn": "1px",
        "--error": "245 34 45",
        "--error-active": "207 19 34",
        "--error-content": "255 255 255",
        "--error-hover": "255 77 79",
        "--neutral": "102 102 102",
        "--neutral-active": "64 64 64",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "115 115 115",
        "--primary": "22 119 255",
        "--primary-active": "9 88 217",
        "--primary-content": "255 255 255",
        "--primary-hover": "64 150 255",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "82 196 26",
        "--success-active": "56 158 13",
        "--success-content": "255 255 255",
        "--success-hover": "115 209 61",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "250 173 20",
        "--warning-active": "212 136 6",
        "--warning-content": "255 255 255",
        "--warning-hover": "255 197 61",
      },
    },
    ":root,[data-theme]": {
      "css": {
        "background-color": "theme(colors.base-100)",
        "color": "theme(colors.base-content)",
      },
    },
    "@supports not (color: oklch(0 0 0))": {
      ":root": {
        "css": {
          "--fallback-a": "#00cfbd",
          "--fallback-ac": "#00100d",
          "--fallback-b1": "#ffffff",
          "--fallback-b2": "#e5e6e6",
          "--fallback-b3": "#e5e6e6",
          "--fallback-bc": "#1f2937",
          "--fallback-er": "#ff6f70",
          "--fallback-erc": "#000000",
          "--fallback-in": "#00b3f0",
          "--fallback-inc": "#000000",
          "--fallback-n": "#2b3440",
          "--fallback-nc": "#d7dde4",
          "--fallback-p": "#491eff",
          "--fallback-pc": "#d4dbff",
          "--fallback-s": "#ff41c7",
          "--fallback-sc": "#fff9fc",
          "--fallback-su": "#00ca92",
          "--fallback-suc": "#000000",
          "--fallback-wa": "#ffc22d",
          "--fallback-wac": "#000000",
          "color-scheme": "light",
        },
      },
      "@media (prefers-color-scheme: dark)": {
        ":root": {
          "css": {
            "--fallback-a": "#00c7b5",
            "--fallback-ac": "#000e0c",
            "--fallback-b1": "#1d232a",
            "--fallback-b2": "#191e24",
            "--fallback-b3": "#15191e",
            "--fallback-bc": "#a6adbb",
            "--fallback-er": "#ff6f70",
            "--fallback-erc": "#000000",
            "--fallback-in": "#00b3f0",
            "--fallback-inc": "#000000",
            "--fallback-n": "#2a323c",
            "--fallback-nc": "#a6adbb",
            "--fallback-p": "#7582ff",
            "--fallback-pc": "#050617",
            "--fallback-s": "#ff71cf",
            "--fallback-sc": "#190211",
            "--fallback-su": "#00ca92",
            "--fallback-suc": "#000000",
            "--fallback-wa": "#ffc22d",
            "--fallback-wac": "#000000",
            "color-scheme": "dark",
          },
        },
      },
    },
  },
  "types": [
    "primary",
    "success",
    "warning",
    "error",
    "neutral",
  ],
}
`;

exports[`base > add extra css options 1`] = `
":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

:root, [data-theme] {
  background-color: theme(colors.base-100);
  color: theme(colors.base-content);
}

@supports not (color: oklch(0 0 0)) {
  :root {
    color-scheme: light;
    --ice-fallback-p: #491eff;
    --ice-fallback-pc: #d4dbff;
    --ice-fallback-s: #ff41c7;
    --ice-fallback-sc: #fff9fc;
    --ice-fallback-a: #00cfbd;
    --ice-fallback-ac: #00100d;
    --ice-fallback-n: #2b3440;
    --ice-fallback-nc: #d7dde4;
    --ice-fallback-b1: #ffffff;
    --ice-fallback-b2: #e5e6e6;
    --ice-fallback-b3: #e5e6e6;
    --ice-fallback-bc: #1f2937;
    --ice-fallback-in: #00b3f0;
    --ice-fallback-inc: #000000;
    --ice-fallback-su: #00ca92;
    --ice-fallback-suc: #000000;
    --ice-fallback-wa: #ffc22d;
    --ice-fallback-wac: #000000;
    --ice-fallback-er: #ff6f70;
    --ice-fallback-erc: #000000;
  }
  @media (prefers-color-scheme: dark) {
    :root {
      color-scheme: dark;
      --ice-fallback-p: #7582ff;
      --ice-fallback-pc: #050617;
      --ice-fallback-s: #ff71cf;
      --ice-fallback-sc: #190211;
      --ice-fallback-a: #00c7b5;
      --ice-fallback-ac: #000e0c;
      --ice-fallback-n: #2a323c;
      --ice-fallback-nc: #a6adbb;
      --ice-fallback-b1: #1d232a;
      --ice-fallback-b2: #191e24;
      --ice-fallback-b3: #15191e;
      --ice-fallback-bc: #a6adbb;
      --ice-fallback-in: #00b3f0;
      --ice-fallback-inc: #000000;
      --ice-fallback-su: #00ca92;
      --ice-fallback-suc: #000000;
      --ice-fallback-wa: #ffc22d;
      --ice-fallback-wac: #000000;
      --ice-fallback-er: #ff6f70;
      --ice-fallback-erc: #000000;
    }
  }
}"
`;

exports[`base > add new theme case 0 > calcBase 1`] = `
{
  "colors": {
    "base-100": "rgba(var(--ice-base-100) / <alpha-value>)",
    "base-1000": "rgba(var(--ice-base-1000) / <alpha-value>)",
    "base-1100": "rgba(var(--ice-base-1100) / <alpha-value>)",
    "base-1200": "rgba(var(--ice-base-1200) / <alpha-value>)",
    "base-1300": "rgba(var(--ice-base-1300) / <alpha-value>)",
    "base-200": "rgba(var(--ice-base-200) / <alpha-value>)",
    "base-300": "rgba(var(--ice-base-300) / <alpha-value>)",
    "base-400": "rgba(var(--ice-base-400) / <alpha-value>)",
    "base-500": "rgba(var(--ice-base-500) / <alpha-value>)",
    "base-600": "rgba(var(--ice-base-600) / <alpha-value>)",
    "base-700": "rgba(var(--ice-base-700) / <alpha-value>)",
    "base-800": "rgba(var(--ice-base-800) / <alpha-value>)",
    "base-900": "rgba(var(--ice-base-900) / <alpha-value>)",
    "base-content": "rgba(var(--ice-base-content) / <alpha-value>)",
    "current": "currentColor",
    "error": "rgba(var(--ice-error) / <alpha-value>)",
    "error-active": "rgba(var(--ice-error-active) / <alpha-value>)",
    "error-content": "rgba(var(--ice-error-content) / <alpha-value>)",
    "error-hover": "rgba(var(--ice-error-hover) / <alpha-value>)",
    "neutral": "rgba(var(--ice-neutral) / <alpha-value>)",
    "neutral-active": "rgba(var(--ice-neutral-active) / <alpha-value>)",
    "neutral-content": "rgba(var(--ice-neutral-content) / <alpha-value>)",
    "neutral-hover": "rgba(var(--ice-neutral-hover) / <alpha-value>)",
    "primary": "rgba(var(--ice-primary) / <alpha-value>)",
    "primary-active": "rgba(var(--ice-primary-active) / <alpha-value>)",
    "primary-content": "rgba(var(--ice-primary-content) / <alpha-value>)",
    "primary-hover": "rgba(var(--ice-primary-hover) / <alpha-value>)",
    "success": "rgba(var(--ice-success) / <alpha-value>)",
    "success-active": "rgba(var(--ice-success-active) / <alpha-value>)",
    "success-content": "rgba(var(--ice-success-content) / <alpha-value>)",
    "success-hover": "rgba(var(--ice-success-hover) / <alpha-value>)",
    "transparent": "transparent",
    "warning": "rgba(var(--ice-warning) / <alpha-value>)",
    "warning-active": "rgba(var(--ice-warning-active) / <alpha-value>)",
    "warning-content": "rgba(var(--ice-warning-content) / <alpha-value>)",
    "warning-hover": "rgba(var(--ice-warning-hover) / <alpha-value>)",
  },
  "presets": {
    ".dark": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "0 0 0",
        "--base-1000": "240 240 240",
        "--base-1100": "245 245 245",
        "--base-1200": "250 250 250",
        "--base-1300": "255 255 255",
        "--base-200": "20 20 20",
        "--base-300": "31 31 31",
        "--base-400": "38 38 38",
        "--base-500": "67 67 67",
        "--base-600": "89 89 89",
        "--base-700": "140 140 140",
        "--base-800": "191 191 191",
        "--base-900": "217 217 217",
        "--base-content": "255 255 255",
        "--border-btn": "1px",
        "--error": "211 32 41",
        "--error-active": "232 71 73",
        "--error-content": "255 255 255",
        "--error-hover": "166 29 36",
        "--neutral": "90 90 90",
        "--neutral-active": "106 106 106",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "73 73 73",
        "--primary": "22 104 220",
        "--primary-active": "60 137 232",
        "--primary-content": "255 255 255",
        "--primary-hover": "21 84 173",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "73 170 25",
        "--success-active": "106 190 57",
        "--success-content": "255 255 255",
        "--success-hover": "60 134 24",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "216 150 20",
        "--warning-active": "232 179 57",
        "--warning-content": "255 255 255",
        "--warning-hover": "170 119 20",
      },
    },
    ".fuck": {
      "css": {
        "--a": "18 52 86",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
      },
    },
    ".light": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "--border-btn": "1px",
        "--error": "245 34 45",
        "--error-active": "207 19 34",
        "--error-content": "255 255 255",
        "--error-hover": "255 77 79",
        "--neutral": "102 102 102",
        "--neutral-active": "64 64 64",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "115 115 115",
        "--primary": "22 119 255",
        "--primary-active": "9 88 217",
        "--primary-content": "255 255 255",
        "--primary-hover": "64 150 255",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "82 196 26",
        "--success-active": "56 158 13",
        "--success-content": "255 255 255",
        "--success-hover": "115 209 61",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "250 173 20",
        "--warning-active": "212 136 6",
        "--warning-content": "255 255 255",
        "--warning-hover": "255 197 61",
      },
    },
    ".shit": {
      "css": {
        "--b": "101 67 33",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
      },
    },
  },
  "types": [
    "primary",
    "success",
    "warning",
    "error",
    "neutral",
  ],
}
`;

exports[`base > add new theme case 0 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.fuck {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-a: 18 52 86;
}

.shit {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-b: 101 67 33;
}"
`;

exports[`base > add new theme case 1 > calcBase 1`] = `
{
  "colors": {
    "base-100": "rgba(var(--ice-base-100) / <alpha-value>)",
    "base-1000": "rgba(var(--ice-base-1000) / <alpha-value>)",
    "base-1100": "rgba(var(--ice-base-1100) / <alpha-value>)",
    "base-1200": "rgba(var(--ice-base-1200) / <alpha-value>)",
    "base-1300": "rgba(var(--ice-base-1300) / <alpha-value>)",
    "base-200": "rgba(var(--ice-base-200) / <alpha-value>)",
    "base-300": "rgba(var(--ice-base-300) / <alpha-value>)",
    "base-400": "rgba(var(--ice-base-400) / <alpha-value>)",
    "base-500": "rgba(var(--ice-base-500) / <alpha-value>)",
    "base-600": "rgba(var(--ice-base-600) / <alpha-value>)",
    "base-700": "rgba(var(--ice-base-700) / <alpha-value>)",
    "base-800": "rgba(var(--ice-base-800) / <alpha-value>)",
    "base-900": "rgba(var(--ice-base-900) / <alpha-value>)",
    "base-content": "rgba(var(--ice-base-content) / <alpha-value>)",
    "current": "currentColor",
    "error": "rgba(var(--ice-error) / <alpha-value>)",
    "error-active": "rgba(var(--ice-error-active) / <alpha-value>)",
    "error-content": "rgba(var(--ice-error-content) / <alpha-value>)",
    "error-hover": "rgba(var(--ice-error-hover) / <alpha-value>)",
    "neutral": "rgba(var(--ice-neutral) / <alpha-value>)",
    "neutral-active": "rgba(var(--ice-neutral-active) / <alpha-value>)",
    "neutral-content": "rgba(var(--ice-neutral-content) / <alpha-value>)",
    "neutral-hover": "rgba(var(--ice-neutral-hover) / <alpha-value>)",
    "primary": "rgba(var(--ice-primary) / <alpha-value>)",
    "primary-active": "rgba(var(--ice-primary-active) / <alpha-value>)",
    "primary-content": "rgba(var(--ice-primary-content) / <alpha-value>)",
    "primary-hover": "rgba(var(--ice-primary-hover) / <alpha-value>)",
    "success": "rgba(var(--ice-success) / <alpha-value>)",
    "success-active": "rgba(var(--ice-success-active) / <alpha-value>)",
    "success-content": "rgba(var(--ice-success-content) / <alpha-value>)",
    "success-hover": "rgba(var(--ice-success-hover) / <alpha-value>)",
    "transparent": "transparent",
    "warning": "rgba(var(--ice-warning) / <alpha-value>)",
    "warning-active": "rgba(var(--ice-warning-active) / <alpha-value>)",
    "warning-content": "rgba(var(--ice-warning-content) / <alpha-value>)",
    "warning-hover": "rgba(var(--ice-warning-hover) / <alpha-value>)",
  },
  "presets": {
    ".dark": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "0 0 0",
        "--base-1000": "240 240 240",
        "--base-1100": "245 245 245",
        "--base-1200": "250 250 250",
        "--base-1300": "255 255 255",
        "--base-200": "20 20 20",
        "--base-300": "31 31 31",
        "--base-400": "38 38 38",
        "--base-500": "67 67 67",
        "--base-600": "89 89 89",
        "--base-700": "140 140 140",
        "--base-800": "191 191 191",
        "--base-900": "217 217 217",
        "--base-content": "255 255 255",
        "--border-btn": "1px",
        "--error": "211 32 41",
        "--error-active": "232 71 73",
        "--error-content": "255 255 255",
        "--error-hover": "166 29 36",
        "--neutral": "90 90 90",
        "--neutral-active": "106 106 106",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "73 73 73",
        "--primary": "22 104 220",
        "--primary-active": "60 137 232",
        "--primary-content": "255 255 255",
        "--primary-hover": "21 84 173",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "73 170 25",
        "--success-active": "106 190 57",
        "--success-content": "255 255 255",
        "--success-hover": "60 134 24",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "216 150 20",
        "--warning-active": "232 179 57",
        "--warning-content": "255 255 255",
        "--warning-hover": "170 119 20",
      },
    },
    ".fuck": {
      "css": {
        "--a": "18 52 86",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "backgroud-color": "red",
      },
    },
    ".light": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "--border-btn": "1px",
        "--error": "245 34 45",
        "--error-active": "207 19 34",
        "--error-content": "255 255 255",
        "--error-hover": "255 77 79",
        "--neutral": "102 102 102",
        "--neutral-active": "64 64 64",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "115 115 115",
        "--primary": "22 119 255",
        "--primary-active": "9 88 217",
        "--primary-content": "255 255 255",
        "--primary-hover": "64 150 255",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "82 196 26",
        "--success-active": "56 158 13",
        "--success-content": "255 255 255",
        "--success-hover": "115 209 61",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "250 173 20",
        "--warning-active": "212 136 6",
        "--warning-content": "255 255 255",
        "--warning-hover": "255 197 61",
      },
    },
    ".shit": {
      "css": {
        "--b": "101 67 33",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "backgroud-color": "yellow",
      },
    },
  },
  "types": [
    "primary",
    "success",
    "warning",
    "error",
    "neutral",
  ],
}
`;

exports[`base > add new theme case 1 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.fuck {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-a: 18 52 86;
  backgroud-color: red;
}

.shit {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-b: 101 67 33;
  backgroud-color: yellow;
}"
`;

exports[`base > snap 1`] = `
":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-mode=dark] {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;

exports[`base > snap case 1 > calcBase 1`] = `
{
  "colors": {
    "base-100": "rgba(var(--ice-base-100) / <alpha-value>)",
    "base-1000": "rgba(var(--ice-base-1000) / <alpha-value>)",
    "base-1100": "rgba(var(--ice-base-1100) / <alpha-value>)",
    "base-1200": "rgba(var(--ice-base-1200) / <alpha-value>)",
    "base-1300": "rgba(var(--ice-base-1300) / <alpha-value>)",
    "base-200": "rgba(var(--ice-base-200) / <alpha-value>)",
    "base-300": "rgba(var(--ice-base-300) / <alpha-value>)",
    "base-400": "rgba(var(--ice-base-400) / <alpha-value>)",
    "base-500": "rgba(var(--ice-base-500) / <alpha-value>)",
    "base-600": "rgba(var(--ice-base-600) / <alpha-value>)",
    "base-700": "rgba(var(--ice-base-700) / <alpha-value>)",
    "base-800": "rgba(var(--ice-base-800) / <alpha-value>)",
    "base-900": "rgba(var(--ice-base-900) / <alpha-value>)",
    "base-content": "rgba(var(--ice-base-content) / <alpha-value>)",
    "current": "currentColor",
    "error": "rgba(var(--ice-error) / <alpha-value>)",
    "error-active": "rgba(var(--ice-error-active) / <alpha-value>)",
    "error-content": "rgba(var(--ice-error-content) / <alpha-value>)",
    "error-hover": "rgba(var(--ice-error-hover) / <alpha-value>)",
    "neutral": "rgba(var(--ice-neutral) / <alpha-value>)",
    "neutral-active": "rgba(var(--ice-neutral-active) / <alpha-value>)",
    "neutral-content": "rgba(var(--ice-neutral-content) / <alpha-value>)",
    "neutral-hover": "rgba(var(--ice-neutral-hover) / <alpha-value>)",
    "primary": "rgba(var(--ice-primary) / <alpha-value>)",
    "primary-active": "rgba(var(--ice-primary-active) / <alpha-value>)",
    "primary-content": "rgba(var(--ice-primary-content) / <alpha-value>)",
    "primary-hover": "rgba(var(--ice-primary-hover) / <alpha-value>)",
    "success": "rgba(var(--ice-success) / <alpha-value>)",
    "success-active": "rgba(var(--ice-success-active) / <alpha-value>)",
    "success-content": "rgba(var(--ice-success-content) / <alpha-value>)",
    "success-hover": "rgba(var(--ice-success-hover) / <alpha-value>)",
    "transparent": "transparent",
    "warning": "rgba(var(--ice-warning) / <alpha-value>)",
    "warning-active": "rgba(var(--ice-warning-active) / <alpha-value>)",
    "warning-content": "rgba(var(--ice-warning-content) / <alpha-value>)",
    "warning-hover": "rgba(var(--ice-warning-hover) / <alpha-value>)",
  },
  "presets": {
    ".dark": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "0 0 0",
        "--base-1000": "240 240 240",
        "--base-1100": "245 245 245",
        "--base-1200": "250 250 250",
        "--base-1300": "255 255 255",
        "--base-200": "20 20 20",
        "--base-300": "31 31 31",
        "--base-400": "38 38 38",
        "--base-500": "67 67 67",
        "--base-600": "89 89 89",
        "--base-700": "140 140 140",
        "--base-800": "191 191 191",
        "--base-900": "217 217 217",
        "--base-content": "255 255 255",
        "--border-btn": "1px",
        "--error": "211 32 41",
        "--error-active": "232 71 73",
        "--error-content": "255 255 255",
        "--error-hover": "166 29 36",
        "--neutral": "90 90 90",
        "--neutral-active": "106 106 106",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "73 73 73",
        "--primary": "22 104 220",
        "--primary-active": "60 137 232",
        "--primary-content": "255 255 255",
        "--primary-hover": "21 84 173",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "73 170 25",
        "--success-active": "106 190 57",
        "--success-content": "255 255 255",
        "--success-hover": "60 134 24",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "216 150 20",
        "--warning-active": "232 179 57",
        "--warning-content": "255 255 255",
        "--warning-hover": "170 119 20",
      },
    },
    ".light": {
      "css": {
        "--animation-btn": "0.25s",
        "--animation-input": "0.2s",
        "--base-100": "255 255 255",
        "--base-1000": "38 38 38",
        "--base-1100": "31 31 31",
        "--base-1200": "20 20 20",
        "--base-1300": "0 0 0",
        "--base-200": "250 250 250",
        "--base-300": "245 245 245",
        "--base-400": "240 240 240",
        "--base-500": "217 217 217",
        "--base-600": "191 191 191",
        "--base-700": "140 140 140",
        "--base-800": "89 89 89",
        "--base-900": "67 67 67",
        "--base-content": "0 0 0",
        "--border-btn": "1px",
        "--error": "245 34 45",
        "--error-active": "207 19 34",
        "--error-content": "255 255 255",
        "--error-hover": "255 77 79",
        "--neutral": "102 102 102",
        "--neutral-active": "64 64 64",
        "--neutral-content": "255 255 255",
        "--neutral-hover": "115 115 115",
        "--primary": "22 119 255",
        "--primary-active": "9 88 217",
        "--primary-content": "255 255 255",
        "--primary-hover": "64 150 255",
        "--rounded-badge": "1.9rem",
        "--rounded-box": "1rem",
        "--rounded-btn": "0.5rem",
        "--skeleton-duration": "1.2s",
        "--success": "82 196 26",
        "--success-active": "56 158 13",
        "--success-content": "255 255 255",
        "--success-hover": "115 209 61",
        "--tab-border": "1px",
        "--tab-radius": "0.5rem",
        "--warning": "250 173 20",
        "--warning-active": "212 136 6",
        "--warning-content": "255 255 255",
        "--warning-hover": "255 197 61",
      },
    },
  },
  "types": [
    "primary",
    "success",
    "warning",
    "error",
    "neutral",
  ],
}
`;

exports[`base > snap case 1 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;
